[LAYOUT] landing page

--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
   <head>
-    {% load django_bootstrap5 %}
-    {% load i18n %}
-    {% load static %}
+    {% load django_bootstrap5 i18n static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
       <title>{% block title %}{% endblock %}</title>
       {% bootstrap_css %}
       {% bootstrap_javascript %}
+      <link rel="stylesheet" type="text/css" href="{% static 'css/head.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/advantages.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/gallery.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/video.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/bikes.css' %}">
       <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" sizes="32x32">
       <link href="{% static 'dist/css/lightbox.css' %}" rel="stylesheet" />
   </head>
-  <body>
-    <div class="dark-bg">
-      <div class="container">
-        <div class="row">
-          {% include 'navbar.html' %}
-          {% bootstrap_messages %}
-          <div class="mb-4"></div>
-        </div>
-      </div>
-    </div>
+  <body class="body-bg">
     {% block content %}{% endblock %}
     <script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'dist/js/lightbox.js' %}"></script>
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
-
-          var alertElements = document.querySelectorAll('.alert');
-
-          alertElements.forEach(function (alert) {
-              setTimeout(function () {
-                  alert.style.display = 'none';
-              }, 5000);
-          });
-      });
+        $(function() {
+        $('.tv-video').each(function() {
+            let image = $(this).attr('data-video');
+            $(this).html('<img alt="" src="https://i.ytimg.com/vi/'+ image +'/hq720.jpg" />');
+        });
+        $('.tv-video').click(function() {
+            $(this).addClass('show');
+            let video = $(this).attr('data-video');
+            $(this).html('<iframe width="560" height="315" src="https://www.youtube.com/embed/'+ video +'?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>');
+        });
+    });
     </script>
     <script>
-      lightbox.option({
-        'resizeDuration': 200,
-        'wrapAround': true
-      });
+        document.addEventListener("DOMContentLoaded", function () {
+
+            var alertElements = document.querySelectorAll('.alert');
+
+            alertElements.forEach(function (alert) {
+                setTimeout(function () {
+                    alert.style.display = 'none';
+                }, 5000);
+            });
+        });
+    </script>
+    <script>
+        lightbox.option({
+          'resizeDuration': 200,
+          'wrapAround': true
+        });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/inputmask@latest/dist/min/jquery.inputmask.bundle.min.js"></script>
     <script>
@@ -51,8 +58,33 @@
             $('#id_phone_number').inputmask('+7(999) 999-99-99');
         });
     </script>
+    <script>
+        const nodes = [].slice.call(document.querySelectorAll('li .data'), 0);
+        const directions  = { 0: 'top', 1: 'right', 2: 'bottom', 3: 'left' };
+        const classNames = ['in', 'out'].map((p) => Object.values(directions).map((d) => `${p}-${d}`)).reduce((a, b) => a.concat(b));
+        const getDirectionKey = (ev, node) => {
+            const { width, height, top, left } = node.getBoundingClientRect();
+            const l = ev.pageX - (left + window.pageXOffset);
+            const t = ev.pageY - (top + window.pageYOffset);
+            const x = (l - (width/2));
+            const y = (t - (height/2));
+            return Math.round(Math.atan2(y, x) / 1.57079633 + 5) % 4;
+        }
+        class hovItem {
+            constructor(element) {
+                this.element = element;
+                this.element.addEventListener('mouseover', (ev) => this.update(ev, 'in'));
+                this.element.addEventListener('mouseout', (ev) => this.update(ev, 'out'));
+            }
+            update(ev, prefix) {
+                this.element.classList.remove(...classNames);
+                this.element.classList.add(`${prefix}-${directions[getDirectionKey(ev, this.element)]}`);
+            }
+        }
+        nodes.forEach(node => new hovItem(node));
+    </script>
   </body>
-<footer class="text-white" style="background-color: rgb(28, 29, 37);">
-  {% include 'footer.html' %}
-</footer>
+  <footer class="text-white" style="background-color: rgb(28, 29, 37);">
+    {% include 'footer.html' %}
+  </footer>
 </html>
