--- a/btr/templates/bookings/form.html
+++ b/btr/templates/bookings/form.html
@@ -10,7 +10,7 @@
             <div class="col-lg-6 col-12 lg-m-y">
                 <h1 class="mb-4 text-center text-white">
                     {{ header }}<br>
-                    {{ selected_date }}
+                    {{ verbose_month }}
                 </h1>
                 <hr class="h-line-light">
                 <div class="row">
