--- a/btr/templates/navbar.html
+++ b/btr/templates/navbar.html
@@ -1,46 +1,53 @@
-{% load static %}
-{% load i18n %}
+{% load static i18n %}
 
-<nav class="navbar navbar-expand-lg text-white">
-  <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/favicon.ico' %}" alt="Icon" width="40" height="40"></a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'bookings' %}">{% translate 'Book' %}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">{% translate 'Gallery' %}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'reviews' %}">{% translate 'Reviews' %}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'briefing' %}">{% translate 'Briefing' %}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'contacts' %}">{% translate 'Contacts' %}</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav" style="margin-left: auto;">
-        <li class="nav-item">
-          {% if not user.is_authenticated %}
-            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#guestModal">
-              <img src="{% static 'images/lk.png' %}" alt="lk" width="35" height="35">
-            </a>
-            {% include 'guest_modal.html' %}
-          {% else %}
-            <a class="nav-link" id="openModalBtn" data-bs-toggle="modal" data-bs-target="#userModal">
-              {% if user.profile_image %}
-                <img src="{{ user.profile_image.url|safe }}" alt="lk" width="35" height="35" style="border-radius: 50%; object-fit: cover;">
-              {% else %}
-                <img src="{% static 'images/lk.png' %}" alt="lk" width="35" height="35">
-              {% endif %}
-            </a>
-            {% include 'user_modal.html' %}
-          {% endif %}
-      </ul>
-  </div>
-</nav>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-1 col-0"></div>
+        <div class="col-lg-10 col-12">
+            <nav class="navbar navbar-expand-lg">
+              <a class="navbar-brand" href="{% url 'home' %}"><img class="cyan-img" src="{% static 'images/favicon.ico' %}" alt="Icon" width="40" height="40"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link font-weight-bold" aria-current="page" href="{% url 'bookings' %}">{% translate 'Book' %}</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link font-weight-bold" aria-current="page" href="#">{% translate 'Gallery' %}</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link font-weight-bold" aria-current="page" href="{% url 'reviews' %}">{% translate 'Reviews' %}</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link font-weight-bold" aria-current="page" href="{% url 'briefing' %}">{% translate 'Briefing' %}</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link font-weight-bold" aria-current="page" href="{% url 'contacts' %}">{% translate 'Contacts' %}</a>
+                    </li>
+                  </ul>
+                  <ul class="navbar-nav" style="margin-left: auto;">
+                    <li class="nav-item">
+                      {% if not user.is_authenticated %}
+                        <a class="nav-link" data-bs-toggle="modal" data-bs-target="#guestModal">
+                          <img src="{% static 'images/lk.png' %}" alt="lk" width="35" height="35">
+                        </a>
+                        {% include 'modals/guest.html' %}
+                      {% else %}
+                        <a class="nav-link" id="openModalBtn" data-bs-toggle="modal" data-bs-target="#userModal">
+                          {% if user.profile_image %}
+                            <img src="{{ user.profile_image.url|safe }}" alt="lk" width="35" height="35" style="border-radius: 50%; object-fit: cover;">
+                          {% else %}
+                            <img src="{% static 'images/lk.png' %}" alt="lk" width="35" height="35">
+                          {% endif %}
+                        </a>
+                        {% include 'modals/user.html' %}
+                      {% endif %}
+                  </ul>
+              </div>
+            </nav>
+        </div>
+        <div class="col-lg-1 col-0"></div>
+    </div>
+</div>
