--- a/btr/templates/briefing/briefing.html
+++ b/btr/templates/briefing/briefing.html
@@ -1,66 +1,45 @@
 {% extends 'base.html' %}
-{% load django_bootstrap5 %}
-{% load i18n %}
-{% load static %}
+{% load django_bootstrap5 i18n static %}
 
 {% block content %}
-<div class="dark-bg">
-    <div class="container lg-p-y">
-        <div class="row text-center text-white">
-            <h1 class="display-5">{% translate 'Safety instructions' %}</h1>
-            <h2 class="fs1">{% translate 'For riding a Pit-bike and Enduro motorcycle' %}</h2>
-            <hr class="h-line-light mt-3">
-        </div>
+<link rel="stylesheet" type="text/css" href="{% static 'css/briefing.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/blackquote.css' %}">
+<div class="navbar-bg lg-m-b">{% include 'navbar.html' %}</div>
+<div class="container mb-3">
+    <div class="row text-center mb-5">
+        <h1 class="display-5">{% translate 'Safety instructions' %}</h1>
+        <h2 class="fs1">{% translate 'For riding a Pit-bike and Enduro motorcycle' %}</h2>
+        <hr class="h-line-dark mt-3">
+    </div>
+    <div class="panel-container">
+        <div class="panel active" style="background-image: url('../static/images/briefing/slide1.jpg')"></div>
+        <div class="panel" style="background-image: url('../static/images/briefing/slide2.jpg')"></div>
+        <div class="panel" style="background-image: url('../static/images/briefing/slide3.jpg')"></div>
+        <div class="panel" style="background-image: url('../static/images/briefing/slide4.jpg')"></div>
+        <div class="panel" style="background-image: url('../static/images/briefing/slide5.jpg')"></div>
     </div>
 </div>
-<div class="dark-bg">
-    <div class="container">
-        <div class="row text-center">
-            <img class="img-fluid" src="https://sun9-77.userapi.com/impg/oddQHj5htXat6QDWc0zNgKLKnYbTV37AGPlCxQ/wYD3zsVW_jk.jpg?size=1280x720&quality=95&sign=9ce4f2a976541c7980bab7eb2f3076bd&type=album" alt="Slide 1">
-        </div>
+<div class="container mb-4">
+    <div class="row">
+        <blockquote class="blockquote-6">
+            <h3>{% translate 'In case of injury, bruises or other harm to your health, we are not responsible.' %}</h3>
+            <cite>{% translate 'BroTeamRacing Team' %}</cite>
+        </blockquote>
     </div>
 </div>
-<div class="dark-bg">
-    <div class="container lg-p-y">
-        <div class="row text-center text-white">
-            <h2 class="fs-2">{% translate 'In case of injury, bruises or other harm to your health, we are not responsible.' %}</h2>
-        </div>
-    </div>
-</div>
-<div class="dark-bg">
-    <div class="container">
-        <div class="row text-center">
-            <img class="img-fluid" src="https://sun9-43.userapi.com/impg/LZfah6HZkwzRFvQ5i1nfu5NgwORYBRLuXC9ZgA/K2L-6f6lUvQ.jpg?size=1280x720&quality=95&sign=dccd94fcdfa4501f80aab94da4c38cf0&type=album" alt="Slide 2">
-        </div>
-    </div>
-</div>
-<div class="dark-bg">
-    <div class="container">
-        <div class="row text-center">
-            <img class="img-fluid" src="https://sun9-24.userapi.com/impg/QbSF8G9zQa60XaCAEAYby3DfdvdO7niXWRJhqw/nLMJ4vjVzMs.jpg?size=1280x720&quality=95&sign=b1540099be6dbadb80b93b3d25ca0b4e&type=album" alt="Slide 3">
-        </div>
-    </div>
-</div>
-<div class="dark-bg">
-    <div class="container">
-        <div class="row text-center">
-            <img class="img-fluid" src="https://sun9-58.userapi.com/impg/L8CDGII-Bp39fTRA53aNIyVm6XQb6BFjiWs5dQ/R9oQQ0cmuw8.jpg?size=1280x720&quality=95&sign=463016baebff431acc5c0003a766025b&type=album" alt="Slide 4">
-        </div>
-    </div>
-</div>
-<div class="dark-bg">
-    <div class="container">
-        <div class="row text-center">
-            <img class="img-fluid" src="https://sun9-43.userapi.com/impg/DvedIpVNnwMvupq4pTKSu6Dpp50RbzrpChR2JQ/D0fHQlDw-Vw.jpg?size=1280x720&quality=95&sign=46e0cc8f2e7924114e44937403764227&type=album" alt="Slide 5">
-        </div>
-    </div>
-</div>
-<div class="dark-bg">
-    <div class="container">
-        <div class="row text-center text-white lg-p-y">
-            <hr class="h-line-light">
-            <h2 class="fs-2">{% translate 'Following these instructions will help you avoid injury.' %}</h2>
-        </div>
-    </div>
-</div>
+
+<script>
+    const panels = document.querySelectorAll('.panel');
+    panels.forEach(panel => {
+        panel.addEventListener('click', () => {
+            removeActiveClasses();
+            panel.classList.add('active');
+        });
+    });
+    function removeActiveClasses() {
+        panels.forEach(panel => {
+            panel.classList.remove('active');
+        });
+    }
+</script>
 {% endblock %}
