--- a/static/css/reviews.css
+++ b/static/css/reviews.css
@@ -1,23 +1,12 @@
-/*styles for bike cards*/
-
-.card-bg {
+.review-bg {
     background-color: rgb(28, 29, 37);
     border: 10px solid rgba(255, 255, 255, 0.5);
     border-radius: 40px 40px 40px 40px;
     padding: 20px;
+    transition: background-color 0.3s, box-shadow 0.3s;
 }
 
-.card {
-    transition: background-color 0.3s, box-shadow 0.3s;
-  }
-
-.card:hover {
+.review-bg:hover {
     background-color: black;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
-}
-
-.card img {
-    width: 350px;
-    height: 350px;
-    object-fit: cover;
 }
